<resources>
    <string name="highScore">Highscore:\u0020</string>
    <string name="score">Score:\u0020</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="new_highscore">New Highscore !!!</string>
    <string name="heads_first_letter">H</string>
    <string name="tails_first_letter">T</string>
    <string name="app_name">Dragon VS Tiger</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="deep_link_url">luckywinnerss.in</string>
    <string name="razor_pay_test">rzp_test_SJyQBaZtlZOjC9</string>
    <string name="facebook_app_id">319765683034434</string>
    <string name="fb_login_protocol_scheme">fb319765683034434</string>
    <string name="chaal_error_messsage">Wait for you chaal</string>
    <string name="sort_error_message">Sort First!</string>
    <string name="select_card_error_message">Please select atleast one Card</string>
    <string name="declare_game">Your opponent declare the game</string>
    <string name="minimum_grouping">Minimum 3 cards Needed For Grouping </string>
    <string name="drop">Drop</string>
    <string name="declare">Declare</string>
    <string name="declare_back">Declare Back</string>
    <string name="group">GROUP</string>
    <string name="discard">Discard</string>
    <string name="finish">Finish</string>
    <string name="drop_message">Continuous \"Please Wait\" after initial round of Win.</string>
    <string name="cards_getting_error">\"Please Wait\" we are getting some error while finding cards for you.</string>
    <string name="please_wait_game_is_going_on">\"Please Wait\" game is going on.</string>
    <string name="tow_palyer">2\nPlayers</string>
    <string name="five_player">5\nPlayers</string>
    <string name="select_no_of_players">Select No. of Players</string>
    <string name="play_now">Play Now</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="please_check_internet_connection">Please Check Internet Connection</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="account_copied_successfully">Account Copied Successfully</string>
    <string name="imp_note">*You Must click to get th latest account every time you recharge, otherwise the account cannot be received quickly.</string>
    <string name="imp_note_2">*Recharge need to be completed within 10 minute. </string>
    <string name="upload">Upload</string>
    <string name="if_you_have_paid_please_upload_a_screenshot">If you have paid , please upload a screenshot</string>
    <string name="completed">Complete</string>
    <string name="teenpatti">DragonTiger</string>
    <string name="andharbahar">AndharBahar</string>
    <string name="dragontiger">DragonTiger</string>
    <string name="share_message">Download Gold Win APP and Enjoy With Your Friends</string>
    <string name="three_player">3\nPlayers</string>
    <string name="table_points">Table Points</string>
    <string name="front">Front</string>
    <string name="Helvetica_Bold">fonts/Helvetica-Bold.ttf</string>
    <string name="Helvetica_Bold_Extra">fonts/helvetica-rounded-bold-5871d05ead8de.otf</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_referal_code_optional">Enter Referal Code (Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="add_cash">Add Cash</string>
    <string name="buy">Buy</string>
    <string name="history">History</string>
    <string name="bonus">Bonus</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="invite">Invite</string>
    <string name="user">User</string>
    <string name="send_request">Send request</string>
    <string name="wrong_declare">Wrong Declare</string>
    <string name="dropped">Dropped</string>
    <string name="table_id">"Table id : "</string>
    <string name="days">"Days "</string>
    <string name="amount">"amount : "</string>
    <string name="congratulation_you_win">"Congratulations you win "</string>
    <string name="back">Back</string>
    <string name="pay_now">\" Pay now \"</string>
    <string name="chips_for_game_play">\" Chips for Game Play\"</string>
    <string name="free_table">Free Table</string>
    <string name="teen_patti">Teen Patti</string>
    <string name="rummy_2_player">Rummy 2 Player</string>
    <string name="rummy_5_player">Rummy 5 Player</string>
    <string name="poker_game">Poker Game</string>
    <string name="rounds">Rounds</string>
    <string name="players">Players</string>
    <string name="name">\"Name: \"</string>
    <string name="phon_no">Ph.No.:</string>
    <string name="bank_details">Bank Details:</string>
    <string name="addhar_no">\"Addhar No.: \"</string>
    <string name="upi">UPI:</string>
    <string name="game_history">Game History</string>
    <string name="redeem_number">Redeem Number</string>
    <string name="coins_for_game_play">\" Coins for Game Play\"</string>
    <string name="you_want_to">\"Are you sure, you want to \"</string>
    <string name="result_game_id">\"Result | Game ID : \"</string>
    <string name="get_ready_next_game_start_in">\"Get Ready - Next game start in \"</string>
    <string name="seconds">second(s)</string>
    <string name="pay">Pay</string>
    <string name="buy_chips">BUY CHIPS</string>
    <string name="joint_us">Joint us</string>
    <string name="ref_code">Ref Code :</string>
    <string name="create_table">Create Table</string>
    <string name="mail">Mail</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="game_start">Game start</string>
    <string name="winner">Winner</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="player_7">Player 7</string>
    <string name="please_wait_for_other_players">Please Wait For Other Players!</string>
    <string name="share_wallet">Share Wallet</string>
    <string name="player1">Player1</string>
    <string name="username">Username</string>
    <string name="total_points">Total Points :</string>
    <string name="game_table_chat">Game Table Chat</string>
    <string name="redeem">Redeem</string>
    <string name="transactions">Transactions</string>
    <string name="rummy">Rummy</string>
    <string name="andhar_bahar">Andhar bahar</string>
    <string name="serial">Serial</string>
    <string name="date">Date</string>
    <string name="game">Game</string>
    <string name="cash">Cash</string>
    <string name="data_no_available">Data no available!</string>
    <string name="my_account">My account</string>
    <string name="hello">hello</string>
    <string name="_10cr_chips_for_game_play">10Cr chips for Game Play</string>
    <string name="user_listing">User Listing</string>
    <string name="enter_table_number">Enter Table Number</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to Leave ?</string>
    <string name="share_your_invite_code">SHARE YOUR INVITE CODE</string>
    <string name="and_get">AND GET</string>
    <string name="your_friend_will_get">YOUR FRIEND WILL GET</string>
    <string name="_100_000_chips">100,000 CHIPS</string>
    <string name="invite_limit_10_friends">(INVITE LIMIT 10 FRIENDS)</string>
    <string name="disable_all">Disable All</string>
    <string name="cash_coupon_not_available">Cash coupon not available.</string>
    <string name="_1_three_of_a_king_rio">1.THREE OF A KING (RIO)</string>
    <string name="_2_stright_flush_puresequence">2. STRIGHT FLUSH (PURESEQUENCE)</string>
    <string name="_3_stright_sequence">3. STRIGHT (SEQUENCE)</string>
    <string name="someone_has_asking_for_share_wallet">Someone has asking for share wallet</string>
    <string name="_2_s">2 s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="total_balance">Total Balance</string>
    <string name="help">Help</string>
    <string name="cash_account">CASH ACCOUNT</string>
    <string name="deposited">Deposited</string>
    <string name="winnigs">Winnigs</string>
    <string name="withdraw">Withdraw</string>
    <string name="ammout">Ammout :</string>
    <string name="gifts_name">Gifts Name</string>
    <string name="you">You</string>
    <string name="points">points</string>
    <string name="spinner_text">Spinner Text</string>
    <string name="day1">Day1</string>
    <string name="congratulations_you_win_1000_coins">Congratulations you win 1000 coins!</string>
    <string name="see">SEE</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add">Add</string>
    <string name="enter_reffer_code">Enter Reffer Code</string>
    <string name="tittle">TITTLE</string>
    <string name="are_you_sure_you_want_to_drop_you_will_lose_this_game_by_20_points">Are you sure you want to drop ? You will lose this game by 20 points.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_version_is_available_n_update_for_more_feature">New Version is Available \n Update for More feature !!</string>
    <string name="update">Update</string>
    <string name="create_table_and_play_with_you_friends">Create table and play with you friends.</string>
    <string name="table_name">Table name</string>
    <string name="min_pot">Min Pot</string>
    <string name="max_players">Max Players</string>
    <string name="table_type">Table Type</string>
    <string name="viewer_status">Viewer Status</string>
    <string name="daily_bonus">Daily bonus</string>
    <string name="collect">Collect</string>
    <string name="result">Result</string>
    <string name="cards">Cards</string>
    <string name="total_point">Total Point</string>
    <string name="joker">Joker</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="serial_no">Serial no</string>
    <string name="status">Status</string>
    <string name="gifts">GIFTS</string>
    <string name="game_points_game_id">Game Points | Game ID :</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="verify">Verify</string>
    <string name="create_group">Create Table</string>
    <string name="id">id</string>
    <string name="tablename">TableName</string>
    <string name="max_player">Max.Player</string>
    <string name="online">Online</string>
    <string name="action">Action</string>
    <string name="invalid">Invalid</string>
    <string name="i_have_read_and_agree_with_the_above">i have read and agree with the above terms and conditions</string>
    <string name="click_here_to_accept">Click here to accept</string>
    <string name="do_you_want_to_logout">Do you want to Logout?</string>
    <string name="settings">Settings</string>
    <string name="player_id">Player ID :</string>
    <string name="disable_all_sound">Disable All Sound</string>
    <string name="view_game">View</string>
    <string name="please_pick_and_drop_card">Please pick and drop card</string>
    <string name="sort">sort</string>
    <string name="get_ready_to_end">Get ready to End</string>
    <string name="CURRENCY_SYMBOL">₹</string>
    <string name="rule">Rule</string>
    <string name="ColorPrediction">Color Prediction</string>
    <string name="change_card">Change Card</string>
    <string name="permission_denied_contacts">Permission Denied</string>
    <string name="sevenupdown">7upDown</string>
    <string name="jackpotteenpatti">Jackpot3patti</string>
</resources>